--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -108,8 +108,8 @@
                             return ((document.getElementsByTagName("iframe").length === 0));
                         }
                     }]
-                }, /** easyXDM.transport.HashTransport*/ {
-                    name: "test easyXDM.transport.HashTransport using onresze",
+                },{
+                    name: "test easyXDM.transport.HashTransport using onresize",
                     steps: [{
                         name: "onReady is fired",
                         timeout: 5000,
@@ -142,7 +142,7 @@
                             return ((document.getElementsByTagName("iframe").length === 0));
                         }
                     }]
-                }, /** easyXDM.transport.PostMessageTransport*/ {
+                },{
                     name: "test easyXDM.transport.PostMessageTransport",
                     steps: [{
                         name: "onReady is fired",
@@ -156,8 +156,75 @@
                                 remote: _remoteUrl + "test_postmessagetransport.html",
                                 onMessage: function(message, origin){
                                     scope.notifyResult((scope.expectedMessage === message));
-                                },
-                                container: document.getElementById("container")
+                                }
+                            }, function(){
+                                scope.notifyResult(true);
+                            });
+                            /** -----------------------------*/
+                        }
+                    }, {
+                        name: "message is echoed back",
+                        timeout: 1000,
+                        run: function(){
+                            this.expectedMessage = "abcd1234";
+                            this.transport.postMessage(this.expectedMessage);
+                        }
+                    }, {
+                        name: "destroy",
+                        run: function(){
+                            this.transport.destroy();
+                            return ((document.getElementsByTagName("iframe").length === 0));
+                        }
+                    }]
+                },{
+                    name: "test easyXDM.transport.BestAvailableTransport",
+                    steps: [{
+                        name: "onReady is fired",
+                        timeout: 5000,
+                        run: function(){
+                            /** -----------------------------*/
+                            var scope = this;
+                            this.transport = new easyXDM.transport.BestAvailableTransport({
+                                channel: "default",
+                                local: "../hash.html",
+                                remote: _remoteUrl + "test_bestavailabletransport.html",
+                                onMessage: function(message, origin){
+                                    scope.notifyResult((scope.expectedMessage === message));
+                                }
+                            }, function(){
+                                scope.notifyResult(true);
+                            });
+                            /** -----------------------------*/
+                        }
+                    }, {
+                        name: "message is echoed back",
+                        timeout: 1000,
+                        run: function(){
+                            this.expectedMessage = "abcd1234";
+                            this.transport.postMessage(this.expectedMessage);
+                        }
+                    }, {
+                        name: "destroy",
+                        run: function(){
+                            this.transport.destroy();
+                            return ((document.getElementsByTagName("iframe").length === 0));
+                        }
+                    }]
+                },{
+                    name: "test easyXDM.transport.BestAvailableTransport with query parameters",
+                    steps: [{
+                        name: "onReady is fired",
+                        timeout: 5000,
+                        run: function(){
+                            /** -----------------------------*/
+                            var scope = this;
+                            this.transport = new easyXDM.transport.BestAvailableTransport({
+                                channel: "default",
+                                local: "../hash.html",
+                                remote: _remoteUrl + "test_bestavailabletransport.html?a=b&c=d",
+                                onMessage: function(message, origin){
+                                    scope.notifyResult((scope.expectedMessage === message));
+                                }
                             }, function(){
                                 scope.notifyResult(true);
                             });
