--- a/src/tests/test_interface.html
+++ b/src/tests/test_interface.html
@@ -2,9 +2,22 @@
 <html>
     <head>
         <title>easyXDM</title>
-        <script type="text/javascript" src="../easyXDM.debug.js">
-            //Is not executed, but makes jslint validate
-            var easyXDM;
+        <script type="text/javascript">
+            if (location.href.indexOf("src") !== -1) {
+                document.write(unescape("%3Cscript src='../easyXDM.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.Serializing.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.Transport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.Configuration.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.Url.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.Widgets.js' type='text/javascript'%3E%3C/script%3E"));
+            }
+            else {
+                if (typeof JSON === "undefined") {
+                    document.write(unescape("%3Cscript src='../json2.js' type='text/javascript'%3E%3C/script%3E"));
+                }
+                document.write(unescape("%3Cscript src='../easyXDM.debug.js' type='text/javascript'%3E%3C/script%3E"));
+            }
         </script>
         <script type="text/javascript">
             easyXDM.DomHelper.requiresJSON("../json2.js");
