For scenarios where you are unable to place hash.html on the local domain, you can now set the local attribute to point at any file available on the domain, like robots.txt or favicon.ico, and set the readyAfter attribute to when you want the library to transition to the ready state. It is important that the local file has had time to load before this.

--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -7,6 +7,9 @@
         </script>
         <script type="text/javascript">
             if (location.href.indexOf("src") !== -1) {
+                if (typeof JSON === "undefined") {
+                    document.write(unescape("%3Cscript src='../../tools/json2.js' type='text/javascript'%3E%3C/script%3E"));
+                }
                 document.write(unescape("%3Cscript src='../easyXDM.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Serializing.js' type='text/javascript'%3E%3C/script%3E"));
