--- a/src/tests/test_transport.html
+++ b/src/tests/test_transport.html
@@ -22,10 +22,8 @@
         <script type="text/javascript">
             var transport;
             window.onload = function(){
-                var query = easyXDM.Url.Query();
-                transport = new easyXDM.transport.HashTransport({
-                    channel: query.channel,
-                    remote: query.endpoint,
+                transport = new easyXDM.transport.BestAvailableTransport({
+                    local: "../hash.html",
                     onMessage: function(message, origin){
                         // Echo back the message
                         transport.postMessage(message);
@@ -34,8 +32,8 @@
             };
             window.onunload = function(){
                 if (transport) {
-					transport.destroy();
-				}
+                    transport.destroy();
+                }
             };
         </script>
     </head>
