Moved the different transport classes into separate files.

--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -11,7 +11,10 @@
                 document.write(unescape("%3Cscript src='../easyXDM.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Serializing.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.Transport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.transport.HashTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.transport.NameTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.transport.PostMessageTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.transport.BestAvailableTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Configuration.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Url.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Widgets.js' type='text/javascript'%3E%3C/script%3E"));
