Implemented the Interface as a new RPCBehavior

--- a/src/tests/test_interface.html
+++ b/src/tests/test_interface.html
@@ -10,6 +10,7 @@
                 document.write(unescape("%3Cscript src='../easyXDM.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.Serializing.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../easyXDM.behaviors.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.behaviors.transports.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.transport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../easyXDM.transport.HashTransport.js' type='text/javascript'%3E%3C/script%3E"));
