Completed the update of the xhr example

--- a/src/example/xhr.html
+++ b/src/example/xhr.html
@@ -29,7 +29,7 @@
             
             function getGlossary(){
 				
-                xhr.post("example/glossary.json", {
+                xhr.post("example/glossary.php", {
                     param1: "a",
                     param2: "b"
                 }, function(json){
