--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -9,18 +9,19 @@
                     document.write(unescape("%3Cscript src='../../tools/json2.js' type='text/javascript'%3E%3C/script%3E"));
                 }
                 document.write(unescape("%3Cscript src='../easyXDM.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.Serializing.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.behaviors.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.behaviors.transports.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.transport.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.transport.HashTransport.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.transport.NameTransport.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.transport.PostMessageTransport.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.transport.BestAvailableTransport.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.Configuration.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.Url.js' type='text/javascript'%3E%3C/script%3E"));
-                document.write(unescape("%3Cscript src='../easyXDM.Widgets.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../Debug.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../configuration.js' type='text/javascript'%3E%3C/script%3E"));
+				document.write(unescape("%3Cscript src='../DomHelper.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../Url.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../Transport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../Rpc.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/PostMessageTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/NameTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/HashTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/ReliableBehavior.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/QueueBehavior.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/VerifyBehavior.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/RpcBehavior.js' type='text/javascript'%3E%3C/script%3E"));
             }
             else {
                 if (typeof JSON === "undefined") {
